--- a/MyApplication/app/src/main/res/layout/fragment_shifts.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_shifts.xml
@@ -138,10 +138,10 @@
         android:text="Räkna ut"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/shiftsResetButton" />
+        app:layout_constraintStart_toEndOf="@+id/button" />
 
     <Button
-        android:id="@+id/shiftsResetButton"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
