--- a/MyApplication/app/src/main/res/layout/shift_item.xml
+++ b/MyApplication/app/src/main/res/layout/shift_item.xml
@@ -6,12 +6,22 @@
     android:layout_height="40dp">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:id="@+id/shiftItemDay"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
-        android:text="Måndag 08:00 - 17:00"
+        android:layout_marginStart="17dp"
+        android:text="Torsdag"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/shiftItemDate"
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:text="2021/03/08"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
