UI förbättringar och alerts

--- a/MyApplication/app/src/main/res/layout/fragment_shifts_2.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_shifts_2.xml
@@ -10,20 +10,10 @@
         android:id="@+id/shiftsStartTimeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:text="Starttid"
-        app:layout_constraintEnd_toStartOf="@+id/shiftsEndTimeButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/shiftsEndTimeButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:text="Sluttid"
+        android:layout_marginTop="116dp"
+        android:text="Lägg till ett skift"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/shiftsStartTimeButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -61,20 +51,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="82dp"
         android:text="Töm listan"
-        app:layout_constraintEnd_toStartOf="@+id/shiftUpdateButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/shiftsRecView" />
-
-    <Button
-        android:id="@+id/shiftUpdateButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Uppdatera"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/resetButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shiftsRecView" />
 
     <Switch
