--- a/MyApplication/app/src/main/res/layout/shift_item.xml
+++ b/MyApplication/app/src/main/res/layout/shift_item.xml
@@ -27,13 +27,18 @@
 
     <Button
         android:id="@+id/shiftItemDeleteButton"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Delete"
+        android:fontFamily="@font/fasolid"
+        android:text=""
+        android:textColor="@color/teal_200"
+        android:textSize="30sp"
+        app:iconPadding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
