--- a/MyApplication/app/src/main/res/navigation/main_nav.xml
+++ b/MyApplication/app/src/main/res/navigation/main_nav.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_nav"
-    app:startDestination="@id/shiftsFragment">
+    app:startDestination="@id/finalFragment">
 
     <fragment
         android:id="@+id/startFragment"
