--- a/MyApplication/app/src/main/res/layout/fragment_shifts_2.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_shifts_2.xml
@@ -19,9 +19,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/shiftsRecView"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="300dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shiftsStartTimeButton" />
