--- a/MyApplication/app/src/main/res/layout/shift_item.xml
+++ b/MyApplication/app/src/main/res/layout/shift_item.xml
@@ -27,15 +27,15 @@
 
     <Button
         android:id="@+id/shiftItemDeleteButton"
-        android:layout_width="60dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:backgroundTint="@color/white"
         android:fontFamily="@font/fasolid"
+        android:stateListAnimator="@null"
         android:text=""
-        android:textColor="@color/teal_200"
-        android:textSize="30sp"
+        android:textColor="@color/orange"
+        android:textSize="15sp"
         app:iconPadding="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
