Behöver kolla över Reset-funktion i Final och ändra OB reglerna i restaurang-funktionen så att OB räknas från starttid av pass och inte klockslaget OB börjar.

--- a/MyApplication/app/src/main/res/layout/fragment_final.xml
+++ b/MyApplication/app/src/main/res/layout/fragment_final.xml
@@ -76,4 +76,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/finalResultTV" />
 
+    <TextView
+        android:id="@+id/finalInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="40dp"
+        android:fontFamily="@font/fasolid"
+        android:text=""
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
